# Gomoku-AI

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
includes/: assistedHumanPlayer.h  boardIterator.h  defaultRules.h  gomoku.h  helper.h  heuristicBoard.h  humanPlayer.h  interface.h  longProRules.h  menu.h  minMaxDynamicPlayer.h  minMaxPlayer.h  noobIA.h  player.h  proRules.h  randomPlayer.h  rules.h  rulesTest.h  swapRules.h  swapTwoRules.h  utils.h
sources/: assistedHumanPlayer.cpp  boardIterator.cpp  defaultRules.cpp  gomoku.cpp  helper.cpp  heuristicBoard.cpp  humanPlayer.cpp  interface.cpp  longProRules.cpp  main.cpp  menu.cpp  minMaxDynamicPlayer.cpp  minMaxPlayer.cpp  noobIA.cpp  player.cpp  proRules.cpp  randomPlayer.cpp  rules.cpp  rulesTest.cpp  swapRules.cpp  swapTwoRules.cpp  utils.cpp
